# sui-indexer

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  navi_mainnet.toml
crates/sui-indexer-config/: Cargo.toml
crates/sui-indexer-config/src/: lib.rs
crates/sui-indexer-core/: Cargo.toml
crates/sui-indexer-core/src/: lib.rs
crates/sui-indexer-core/src/sui/: checkpoint.rs  grpc_client.rs  mod.rs
crates/sui-indexer-events/: Cargo.toml
crates/sui-indexer-events/src/: batch.rs  filter.rs  lib.rs  processor.rs  transformer.rs
crates/sui-indexer-storage/: Cargo.toml
crates/sui-indexer-storage/migrations/: 20250826000001_initial_schema.sql  20250826000002_processed_tables.sql  README.md
crates/sui-indexer-storage/src/: lib.rs  migrations.rs  models.rs  postgres.rs
examples/: README.md  custom_defi_indexer.rs  simple_indexer.rs
