[package]
name = "sui-indexer-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Configuration management for Sui Indexer"

[dependencies]
config.workspace = true
eyre.workspace = true
serde.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
