[package]
name = "sui-indexer-events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Event processing pipeline for Sui Indexer"

[dependencies]
# Workspace dependencies
sui-indexer-config = { path = "../sui-indexer-config" }

# Sui dependencies
sui-json-rpc-types.workspace = true
sui-types.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
eyre.workspace = true
thiserror.workspace = true

# Async utilities
async-trait.workspace = true

# Data structures
chrono.workspace = true
uuid.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
